2006-06-15  David Reveman  <davidr@novell.com>

	* plugins/cube.c (cubePaintTransformedScreen): Remove
	PAINT_SCREEN_CLEAR_MASK from mask.

	* plugins/switcher.c (switchPaintScreen): Add PAINT_SCREEN_CLEAR_MASK
	when zooming. (bnc 183676)

	* src/paint.c (paintTransformedScreen): Clear color buffer if
	PAINT_SCREEN_CLEAR_MASK is present.

	* include/compiz.h: Add PAINT_SCREEN_CLEAR_MASK.

	* gnome/window-decorator/gnome-window-decorator.c: Add DM selection
	support and --repalce option so it's possible to replace an
	existing window decorator in the same way as it's possible to replace
	a window manager. (bnc 185296)
	(close_button_event):
	(max_button_event):
	(min_button_event): De-highlight on NotifyGrab. (bnc 185293)

2006-06-12  Dan Winship  <danw@novell.com>

	* plugins/cube.c: 
	* plugins/switcher.c: Mark cube as needing to load before switcher
	rather than marking switcher as requiring cube. bnc #183676.

	* plugins/gconf-dump.c (dumpPluginOptions): Output load_before and
	requires for all plugins, even if the list is empty, to ensure
	that an empty value in a new release overrides a non-empty value
	in an older release.

	* plugins/compiz.schemas.in.in: regen

2006-06-09  Dan Winship  <danw@novell.com>

	* configure.ac: add translations

2006-06-09  David Reveman  <davidr@novell.com>

	* plugins/move.c (moveHandleMotionEvent): Handle shaded windows
	better.

	* src/window.c (maximizeWindow):
	* src/event.c (handleEvent): Allow windows to be both maximized
	and shaded.

	* src/window.c:  Update addWindowSizeChanges so it can be used by
	moveResizeWindow.
	(updateWindowAttributes): Add missing sendSyncRequest call.
	(addWindowSizeChanges): Make maximized window placement a bit better.
	(moveResizeWindow): Adjust window geometry using
	addWindowSizeChanges. (bnc 183121)

	* src/window.c: Only allow shading on windows with top decoration.

	* src/event.c (handleEvent): Check that shade action is allowed
	before shading a window.
